src/test/deca/syntax/invalid/homemade/test/test_pars_inv_while_oubli_condition.deca
// Description:
//    tests de programme incorrect syntaxiquement pour le while
//
// Resultats:
//    Ligne 12 : Erreur (oubli condition)
//    
//
// Historique:
//    cree le 04/01/2023

{
    while {
        println("Hello");
    }
}
